// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TopicMolecule > 2-chlorobutane 1`] = `
[
  {
    "atomLabel": "C",
    "atomMapNo": 0,
    "atomicNo": 6,
    "attachedHydrogensIDCodes": [
      "gGPDALzHRVzjbHC}H\`QJh",
    ],
    "heavyAtom": undefined,
    "idCode": "gJPHADIMuTe@XbhOtbIpj\`",
    "nbAttachedHydrogens": 3,
    "nbEquivalentAtoms": 1,
  },
  {
    "atomLabel": "C",
    "atomMapNo": 0,
    "atomicNo": 6,
    "attachedHydrogensIDCodes": [
      "gGPDALjHRZzjdhC}H\`QJh",
    ],
    "heavyAtom": undefined,
    "idCode": "gJPHADILuTe@XdhOtbQpj\`",
    "nbAttachedHydrogens": 1,
    "nbEquivalentAtoms": 1,
  },
  {
    "atomLabel": "Cl",
    "atomMapNo": 0,
    "atomicNo": 17,
    "attachedHydrogensIDCodes": [],
    "heavyAtom": undefined,
    "idCode": "gJPHADILuTe@X\`hOtbCpfuP",
    "nbAttachedHydrogens": 0,
    "nbEquivalentAtoms": 1,
  },
  {
    "atomLabel": "C",
    "atomMapNo": 0,
    "atomicNo": 6,
    "attachedHydrogensIDCodes": [
      "gGPDALfHRYjjThU@_iDBIU@",
      "gGPDALfHRYjjThQ@_iDBIU@",
    ],
    "heavyAtom": undefined,
    "idCode": "gJPHADILuTe@XbhOtbIpj\`",
    "nbAttachedHydrogens": 2,
    "nbEquivalentAtoms": 1,
  },
  {
    "atomLabel": "C",
    "atomMapNo": 0,
    "atomicNo": 6,
    "attachedHydrogensIDCodes": [
      "gGPDALfHRUjjfHC}H\`QJh",
    ],
    "heavyAtom": undefined,
    "idCode": "gJPHADILuTe@XahOtbEpj\`",
    "nbAttachedHydrogens": 3,
    "nbEquivalentAtoms": 1,
  },
  {
    "atomLabel": "H",
    "atomMapNo": 0,
    "atomicNo": 1,
    "attachedHydrogensIDCodes": [],
    "heavyAtom": "gJPHADILuTe@XdhOtbQpj\`",
    "idCode": "gGPDALjHRZzjdhC}H\`QJh",
    "nbAttachedHydrogens": 0,
    "nbEquivalentAtoms": 1,
  },
]
`;

exports[`TopicMolecule > ethanol 1`] = `
[
  {
    "atomLabel": "O",
    "atomMapNo": 0,
    "attachedHydrogensIDCodes": [
      "gCaHHIeIZ\`GzQ@bUP",
    ],
    "heavyAtom": undefined,
    "idCode": "eMHAIhFHhOtdGrj@",
    "nbAttachedHydrogens": 1,
    "nbEquivalentAtoms": 1,
  },
  {
    "atomLabel": "C",
    "atomMapNo": 0,
    "attachedHydrogensIDCodes": [
      "gCaHLIeIZ\`GzQ@bUP",
    ],
    "heavyAtom": undefined,
    "idCode": "eMHAIhFIhOtdWBj@",
    "nbAttachedHydrogens": 3,
    "nbEquivalentAtoms": 1,
  },
  {
    "atomLabel": "C",
    "atomMapNo": 0,
    "attachedHydrogensIDCodes": [
      "gCaHDIeIjiJ@RHDRj@",
    ],
    "heavyAtom": undefined,
    "idCode": "eMHAIhFJhOtdgBj@",
    "nbAttachedHydrogens": 2,
    "nbEquivalentAtoms": 1,
  },
  {
    "atomLabel": "H",
    "atomMapNo": 0,
    "attachedHydrogensIDCodes": [],
    "heavyAtom": "eMHAIhFIhOtdWBj@",
    "idCode": "gCaHLIeIZ\`GzQ@bUP",
    "nbAttachedHydrogens": 0,
    "nbEquivalentAtoms": 3,
  },
  {
    "atomLabel": "H",
    "atomMapNo": 0,
    "attachedHydrogensIDCodes": [],
    "heavyAtom": "eMHAIhFHhOtdGrj@",
    "idCode": "gCaHHIeIZ\`GzQ@bUP",
    "nbAttachedHydrogens": 0,
    "nbEquivalentAtoms": 1,
  },
  {
    "atomLabel": "H",
    "atomMapNo": 0,
    "attachedHydrogensIDCodes": [],
    "heavyAtom": "eMHAIhFIhOtdWBj@",
    "idCode": "gCaHLIeIZ\`GzQ@bUP",
    "nbAttachedHydrogens": 0,
    "nbEquivalentAtoms": 3,
  },
  {
    "atomLabel": "H",
    "atomMapNo": 0,
    "attachedHydrogensIDCodes": [],
    "heavyAtom": "eMHAIhFIhOtdWBj@",
    "idCode": "gCaHLIeIZ\`GzQ@bUP",
    "nbAttachedHydrogens": 0,
    "nbEquivalentAtoms": 3,
  },
  {
    "atomLabel": "H",
    "atomMapNo": 0,
    "attachedHydrogensIDCodes": [],
    "heavyAtom": "eMHAIhFJhOtdgBj@",
    "idCode": "gCaHDIeIjiJ@RHDRj@",
    "nbAttachedHydrogens": 0,
    "nbEquivalentAtoms": 2,
  },
  {
    "atomLabel": "H",
    "atomMapNo": 0,
    "attachedHydrogensIDCodes": [],
    "heavyAtom": "eMHAIhFJhOtdgBj@",
    "idCode": "gCaHDIeIjiJ@RHDRj@",
    "nbAttachedHydrogens": 0,
    "nbEquivalentAtoms": 2,
  },
]
`;

exports[`TopicMolecule > ethanol 2`] = `
[
  {
    "atomLabel": "C",
    "atoms": [
      0,
    ],
    "attachedHydrogens": [
      4,
      5,
      6,
    ],
    "counter": 1,
    "heavyAtoms": [],
    "oclID": "eMHAIhFIhOtdWBj@",
  },
  {
    "atomLabel": "C",
    "atoms": [
      1,
    ],
    "attachedHydrogens": [
      7,
      8,
    ],
    "counter": 1,
    "heavyAtoms": [],
    "oclID": "eMHAIhFJhOtdgBj@",
  },
  {
    "atomLabel": "O",
    "atoms": [
      2,
    ],
    "attachedHydrogens": [
      3,
    ],
    "counter": 1,
    "heavyAtoms": [],
    "oclID": "eMHAIhFHhOtdGrj@",
  },
  {
    "atomLabel": "H",
    "atoms": [
      3,
    ],
    "attachedHydrogens": [],
    "counter": 1,
    "heavyAtoms": [
      2,
    ],
    "oclID": "gCaHHIeIZ\`GzQ@bUP",
  },
  {
    "atomLabel": "H",
    "atoms": [
      4,
      5,
      6,
    ],
    "attachedHydrogens": [],
    "counter": 3,
    "heavyAtoms": [
      0,
    ],
    "oclID": "gCaHLIeIZ\`GzQ@bUP",
  },
  {
    "atomLabel": "H",
    "atoms": [
      7,
      8,
    ],
    "attachedHydrogens": [],
    "counter": 2,
    "heavyAtoms": [
      1,
    ],
    "oclID": "gCaHDIeIjiJ@RHDRj@",
  },
]
`;

exports[`TopicMolecule > ethanol toggle implicit H 1`] = `
[
  {
    "atomLabel": "C",
    "atomMapNo": 0,
    "atomicNo": 6,
    "attachedHydrogensIDCodes": [
      "gCaHLIeIZ\`GzQ@bUP",
    ],
    "heavyAtom": undefined,
    "idCode": "eMHAIhFIhOtdWBj@",
    "nbAttachedHydrogens": 3,
    "nbEquivalentAtoms": 1,
  },
  {
    "atomLabel": "C",
    "atomMapNo": 0,
    "atomicNo": 6,
    "attachedHydrogensIDCodes": [
      "gCaHDIeIjiJ@RHDRj@",
    ],
    "heavyAtom": undefined,
    "idCode": "eMHAIhFJhOtdgBj@",
    "nbAttachedHydrogens": 2,
    "nbEquivalentAtoms": 1,
  },
  {
    "atomLabel": "O",
    "atomMapNo": 0,
    "atomicNo": 8,
    "attachedHydrogensIDCodes": [
      "gCaHHIeIZ\`GzQ@bUP",
    ],
    "heavyAtom": undefined,
    "idCode": "eMHAIhFHhOtdGrj@",
    "nbAttachedHydrogens": 1,
    "nbEquivalentAtoms": 1,
  },
]
`;

exports[`TopicMolecule > ethanol toggle implicit H 2`] = `
[
  {
    "atomLabel": "C",
    "atomMapNo": 0,
    "atomicNo": 6,
    "attachedHydrogensIDCodes": [
      "gCaHLIeIZ\`GzQ@bUP",
    ],
    "heavyAtom": undefined,
    "idCode": "eMHAIhFIhOtdWBj@",
    "nbAttachedHydrogens": 3,
    "nbEquivalentAtoms": 1,
  },
  {
    "atomLabel": "C",
    "atomMapNo": 0,
    "atomicNo": 6,
    "attachedHydrogensIDCodes": [
      "gCaHDIeIjiJ@RHDRj@",
    ],
    "heavyAtom": undefined,
    "idCode": "eMHAIhFJhOtdgBj@",
    "nbAttachedHydrogens": 2,
    "nbEquivalentAtoms": 1,
  },
  {
    "atomLabel": "O",
    "atomMapNo": 0,
    "atomicNo": 8,
    "attachedHydrogensIDCodes": [
      "gCaHHIeIZ\`GzQ@bUP",
    ],
    "heavyAtom": undefined,
    "idCode": "eMHAIhFHhOtdGrj@",
    "nbAttachedHydrogens": 1,
    "nbEquivalentAtoms": 1,
  },
  {
    "atomLabel": "H",
    "atomMapNo": 0,
    "atomicNo": 1,
    "attachedHydrogensIDCodes": [],
    "heavyAtom": "eMHAIhFIhOtdWBj@",
    "idCode": "gCaHLIeIZ\`GzQ@bUP",
    "nbAttachedHydrogens": 0,
    "nbEquivalentAtoms": 3,
  },
  {
    "atomLabel": "H",
    "atomMapNo": 0,
    "atomicNo": 1,
    "attachedHydrogensIDCodes": [],
    "heavyAtom": "eMHAIhFIhOtdWBj@",
    "idCode": "gCaHLIeIZ\`GzQ@bUP",
    "nbAttachedHydrogens": 0,
    "nbEquivalentAtoms": 3,
  },
  {
    "atomLabel": "H",
    "atomMapNo": 0,
    "atomicNo": 1,
    "attachedHydrogensIDCodes": [],
    "heavyAtom": "eMHAIhFIhOtdWBj@",
    "idCode": "gCaHLIeIZ\`GzQ@bUP",
    "nbAttachedHydrogens": 0,
    "nbEquivalentAtoms": 3,
  },
]
`;

exports[`TopicMolecule > ethanol toggle implicit H 3`] = `
[
  {
    "atomLabel": "C",
    "atomMapNo": 0,
    "atomicNo": 6,
    "attachedHydrogensIDCodes": [
      "gCaHLIeIZ\`GzQ@bUP",
    ],
    "heavyAtom": undefined,
    "idCode": "eMHAIhFIhOtdWBj@",
    "nbAttachedHydrogens": 3,
    "nbEquivalentAtoms": 1,
  },
  {
    "atomLabel": "C",
    "atomMapNo": 0,
    "atomicNo": 6,
    "attachedHydrogensIDCodes": [
      "gCaHDIeIjiJ@RHDRj@",
    ],
    "heavyAtom": undefined,
    "idCode": "eMHAIhFJhOtdgBj@",
    "nbAttachedHydrogens": 2,
    "nbEquivalentAtoms": 1,
  },
  {
    "atomLabel": "O",
    "atomMapNo": 0,
    "atomicNo": 8,
    "attachedHydrogensIDCodes": [
      "gCaHHIeIZ\`GzQ@bUP",
    ],
    "heavyAtom": undefined,
    "idCode": "eMHAIhFHhOtdGrj@",
    "nbAttachedHydrogens": 1,
    "nbEquivalentAtoms": 1,
  },
  {
    "atomLabel": "H",
    "atomMapNo": 0,
    "atomicNo": 1,
    "attachedHydrogensIDCodes": [],
    "heavyAtom": "eMHAIhFJhOtdgBj@",
    "idCode": "gCaHDIeIjiJ@RHDRj@",
    "nbAttachedHydrogens": 0,
    "nbEquivalentAtoms": 2,
  },
  {
    "atomLabel": "H",
    "atomMapNo": 0,
    "atomicNo": 1,
    "attachedHydrogensIDCodes": [],
    "heavyAtom": "eMHAIhFJhOtdgBj@",
    "idCode": "gCaHDIeIjiJ@RHDRj@",
    "nbAttachedHydrogens": 0,
    "nbEquivalentAtoms": 2,
  },
]
`;

exports[`TopicMolecule > ethanol toggle implicit H 4`] = `
[
  [
    "fH@NJ\`Rapj\`",
    "eF@Hp\\QP^cotdGBj@",
    "eMHAIhNIhOMcwzRKaU@",
    "eMHAIhFIhOtdWBj@",
    "eMHAIhFIhOtdWBj@",
  ],
  [
    "fH@NJ\`Rapj\`",
    "eMHAIhNJhOUgzRSaU@",
    "eMHAIhFJhOtdgBj@",
    "eMHAIhFJhOtdgBj@",
    "eMHAIhFJhOtdgBj@",
  ],
  [
    "fI@GEP_iP~UP",
    "eFHBLGDTGhc}IA|j\`",
    "eMHAIhNHhOIEgzRCyU@",
    "eMHAIhFHhOtdGrj@",
    "eMHAIhFHhOtdGrj@",
  ],
  [
    "fHdrARaDj\`",
    "eFBBYcARPQJh",
    "gCaHDIeIjiJA}IGzQ@bUP",
    "gCaHDIeIjiJ@RHDRj@",
    "gCaHDIeIjiJ@RHDRj@",
  ],
  [
    "fHdrARaDj\`",
    "eFBBYcARPQJh",
    "gCaHDIeIjiJA}IGzQ@bUP",
    "gCaHDIeIjiJ@RHDRj@",
    "gCaHDIeIjiJ@RHDRj@",
  ],
  [
    "fHdrARaDj\`",
    "eFBBYcARPQJh",
    "eMBBYRZCzlRPQJh",
    "gCaHLIeIZ\`OeLV_iDBIU@",
    "gCaHLIeIZ\`GzQ@bUP",
  ],
  [
    "fHdrARaDj\`",
    "eFBBYcARPQJh",
    "eMBBYRZCzlRPQJh",
    "gCaHLIeIZ\`OeLV_iDBIU@",
    "gCaHLIeIZ\`GzQ@bUP",
  ],
  [
    "fHdrARaDj\`",
    "eFBBYcARPQJh",
    "eMBBYRZCzlRPQJh",
    "gCaHLIeIZ\`OeLV_iDBIU@",
    "gCaHLIeIZ\`GzQ@bUP",
  ],
  [
    "fHdrARaDj\`",
    "eFJHfXp_tdDRj@",
    "eMJHfTf\`iHHeT",
    "gCaHHIeIZ\`OhlRHDRj@",
    "gCaHHIeIZ\`GzQ@bUP",
  ],
]
`;

exports[`TopicMolecule > ethanol toggle implicit H 5`] = `
[
  [
    "fH@NJ\`Rapj\`",
    "eF@Hp\\QP^cotdGBj@",
    "eMHAIhNIhOMcwzRKaU@",
    "eMHAIhFIhOtdWBj@",
    "eMHAIhFIhOtdWBj@",
  ],
  [
    "fH@NJ\`Rapj\`",
    "eMHAIhNJhOUgzRSaU@",
    "eMHAIhFJhOtdgBj@",
    "eMHAIhFJhOtdgBj@",
    "eMHAIhFJhOtdgBj@",
  ],
  [
    "fI@GEP_iP~UP",
    "eFHBLGDTGhc}IA|j\`",
    "eMHAIhNHhOIEgzRCyU@",
    "eMHAIhFHhOtdGrj@",
    "eMHAIhFHhOtdGrj@",
  ],
  [
    "fHdrARaDj\`",
    "eFBBYcARPQJh",
    "gCaHDIeIjiJA}IGzQ@bUP",
    "gCaHDIeIjiJ@RHDRj@",
    "gCaHDIeIjiJ@RHDRj@",
  ],
  [
    "fHdrARaDj\`",
    "eFBBYcARPQJh",
    "gCaHDIeIjiJA}IGzQ@bUP",
    "gCaHDIeIjiJ@RHDRj@",
    "gCaHDIeIjiJ@RHDRj@",
  ],
  [
    "fHdrARaDj\`",
    "eFBBYcARPQJh",
    "eMBBYRZCzlRPQJh",
    "gCaHLIeIZ\`OeLV_iDBIU@",
    "gCaHLIeIZ\`GzQ@bUP",
  ],
  [
    "fHdrARaDj\`",
    "eFBBYcARPQJh",
    "eMBBYRZCzlRPQJh",
    "gCaHLIeIZ\`OeLV_iDBIU@",
    "gCaHLIeIZ\`GzQ@bUP",
  ],
  [
    "fHdrARaDj\`",
    "eFBBYcARPQJh",
    "eMBBYRZCzlRPQJh",
    "gCaHLIeIZ\`OeLV_iDBIU@",
    "gCaHLIeIZ\`GzQ@bUP",
  ],
  [
    "fHdrARaDj\`",
    "eFJHfXp_tdDRj@",
    "eMJHfTf\`iHHeT",
    "gCaHHIeIZ\`OhlRHDRj@",
    "gCaHHIeIZ\`GzQ@bUP",
  ],
]
`;

exports[`TopicMolecule > tert-butanol 1`] = `
{
  "gGQHHIeIZjhA~dPHeT": {
    "atomLabel": "H",
    "atoms": [
      14,
    ],
    "attachedHydrogens": [],
    "counter": 1,
    "heavyAtoms": [
      4,
    ],
    "oclID": "gGQHHIeIZjhA~dPHeT",
  },
  "gGQHLIeIZjhA~dPHeT": {
    "atomLabel": "H",
    "atoms": [
      5,
      6,
      7,
      8,
      9,
      10,
      11,
      12,
      13,
    ],
    "attachedHydrogens": [],
    "counter": 9,
    "heavyAtoms": [
      1,
      2,
      3,
    ],
    "oclID": "gGQHLIeIZjhA~dPHeT",
  },
  "gJQ@@duU@LPTGzQ@~UP": {
    "atomLabel": "O",
    "atoms": [
      4,
    ],
    "attachedHydrogens": [
      14,
    ],
    "counter": 1,
    "heavyAtoms": [],
    "oclID": "gJQ@@duU@LPTGzQ@~UP",
  },
  "gJQ@@duU@LQTGzQDxUP": {
    "atomLabel": "C",
    "atoms": [
      1,
      2,
      3,
    ],
    "attachedHydrogens": [
      5,
      6,
      7,
      8,
      9,
      10,
      11,
      12,
      13,
    ],
    "counter": 3,
    "heavyAtoms": [],
    "oclID": "gJQ@@duU@LQTGzQDxUP",
  },
  "gJQ@@duU@LRTGzQHxUP": {
    "atomLabel": "C",
    "atoms": [
      0,
    ],
    "attachedHydrogens": [],
    "counter": 1,
    "heavyAtoms": [],
    "oclID": "gJQ@@duU@LRTGzQHxUP",
  },
}
`;
